--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Ajmery Jaman
 Maintainer: The package maintainer <ajaman@isrt.ac.bd>
 Description: This package is used for estimating the causal effect of a time-varying exposure with a simultaneous selection of effect modifiers in the context of an structural nested mean model (SNMM) for repeated outcomes.
-License: MIT + file LICENSE
+License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
